@@ -58,5 +58,4 @@ source "$APPSDIR/examples/usbterm/Kconfig"
 source "$APPSDIR/examples/watchdog/Kconfig"
 source "$APPSDIR/examples/wget/Kconfig"
 source "$APPSDIR/examples/wgetjson/Kconfig"
-source "$APPSDIR/examples/wlan/Kconfig"
 source "$APPSDIR/examples/xmlrpc/Kconfig"
