@@ -254,10 +254,6 @@ ifeq ($(CONFIG_EXAMPLES_WGETJSON),y)
 CONFIGURED_APPS += examples/wgetjson
 endif
 
-ifeq ($(CONFIG_EXAMPLES_WLAN),y)
-CONFIGURED_APPS += examples/wlan
-endif
-
 ifeq ($(CONFIG_EXAMPLES_XMLRPC),y)
 CONFIGURED_APPS += examples/xmlrpc
 endif
